# ffxi-login-rs

./: Cargo.toml  README.md  config.example.json  config.json
.github/workflows/: release.yml
docs/: pol-login-sequence.md
src/: config.rs  hosts.rs  launcher.rs  logging.rs  login_bin.rs  main.rs  proxy.rs  win32.rs
